v1.0.0/modules/schema/pages/class/EndDeviceControl.adoc
= `EndDeviceControl`
:toclevels: 4


+++Instructs an end device (or an end device group) to perform a specified action.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EndDeviceControl`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`EndDeviceControl`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
EndDeviceControl {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceTiming {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EndDeviceTiming {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDevice {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePointGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceControlType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




EndDeviceControl -> EndDeviceTiming: primaryDeviceTiming


EndDeviceControl -> DateTimeInterval: scheduledInterval


EndDeviceControl -> EndDeviceTiming: secondaryDeviceTiming


EndDeviceControl -> EndDeviceAction: EndDeviceAction


EndDeviceControl -> EndDevice: EndDevices


EndDeviceControl -> UsagePoint: UsagePoints


EndDeviceControl -> UsagePointGroup: UsagePointGroups


EndDeviceControl -> EndDeviceControlType: EndDeviceControlType


EndDeviceControl -> EndDeviceGroup: EndDeviceGroups


EndDeviceControl -> DiagramObject: DiagramObjects


EndDeviceControl -> InstanceSet: InstanceSet


EndDeviceControl -> Name: Names


EndDeviceControl -> ChangeSetMember: PropertiesCIMDataObject


EndDeviceControl -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<EndDeviceControlType,`EndDeviceControlType`>>
| 1
| xref::class/EndDeviceControlType.adoc[`EndDeviceControlType`]
| +++Type of this end device control.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<EndDeviceAction,`EndDeviceAction`>>
| 0..1
| xref::class/EndDeviceAction.adoc[`EndDeviceAction`]
| +++End device action issued by this end device control.+++

| <<drProgramLevel,`drProgramLevel`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Level of a demand response program request, where 0=emergency. Note: Attribute is not defined on DemandResponseProgram as it is not its inherent property (it serves to control it).+++

| <<drProgramMandatory,`drProgramMandatory`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Whether a demand response program request is mandatory. Note: Attribute is not defined on DemandResponseProgram as it is not its inherent property (it serves to control it).+++

| <<issuerID,`issuerID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Unique identifier of the business entity originating an end device control.+++

| <<issuerTrackingID,`issuerTrackingID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Identifier assigned by the initiator (e.g. retail electric provider) of an end device control action to uniquely identify the demand response event, text message, or other subject of the control action. Can be used when cancelling an event or text message request or to identify the originating event or text message in a consequential end device event.+++

| <<priceSignal,`priceSignal`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++(if applicable) Price signal used as parameter for this end device control.+++

| <<primaryDeviceTiming,`primaryDeviceTiming`>>
| 0..1
| xref::class/EndDeviceTiming.adoc[`EndDeviceTiming`]
| +++Timing for the control actions performed on the device identified in the end device control.+++

| <<reason,`reason`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reason for the control action that allows to determine how to continue processing. For example, disconnect meter command may require different processing by the receiving system if it has been issued for a network-related reason (protection) or for a payment-related reason.+++

| <<scheduledInterval,`scheduledInterval`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++(if control has scheduled duration) Date and time interval the control has been scheduled to execute within.+++

| <<secondaryDeviceTiming,`secondaryDeviceTiming`>>
| 0..1
| xref::class/EndDeviceTiming.adoc[`EndDeviceTiming`]
| +++Timing for the control actions performed by devices that are responding to event related information sent to the primary device indicated in the end device control.  For example, load control actions performed by a PAN device in response to demand response event information sent to a PAN gateway server.+++

| <<EndDeviceGroups,`EndDeviceGroups`>>
| 0..*
| xref::class/EndDeviceGroup.adoc[`EndDeviceGroup`]
| +++All end device groups receiving commands from this end device control.+++

| <<EndDevices,`EndDevices`>>
| 0..*
| xref::class/EndDevice.adoc[`EndDevice`]
| +++All end devices receiving commands from this end device control.+++

| <<UsagePointGroups,`UsagePointGroups`>>
| 0..*
| xref::class/UsagePointGroup.adoc[`UsagePointGroup`]
| +++All usage point groups receiving commands from this end device control.+++

| <<UsagePoints,`UsagePoints`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All usage points receiving commands from this end device control.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#drProgramLevel]
=== `drProgramLevel`
+++Level of a demand response program request, where 0=emergency. Note: Attribute is not defined on DemandResponseProgram as it is not its inherent property (it serves to control it).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.drProgramLevel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#drProgramMandatory]
=== `drProgramMandatory`
+++Whether a demand response program request is mandatory. Note: Attribute is not defined on DemandResponseProgram as it is not its inherent property (it serves to control it).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.drProgramMandatory`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#EndDeviceAction]
=== `EndDeviceAction`
+++End device action issued by this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.EndDeviceAction`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceAction.adoc[`EndDeviceAction`]


|===

//[discrete]
[#EndDeviceControlType]
=== `EndDeviceControlType`
+++Type of this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.EndDeviceControlType`
| Cardinality
| 1
| Type
| xref::class/EndDeviceControlType.adoc[`EndDeviceControlType`]


|===

//[discrete]
[#EndDeviceGroups]
=== `EndDeviceGroups`
+++All end device groups receiving commands from this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.EndDeviceGroups`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceGroup.adoc[`EndDeviceGroup`]


|===

//[discrete]
[#EndDevices]
=== `EndDevices`
+++All end devices receiving commands from this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.EndDevices`
| Cardinality
| 0..*
| Type
| xref::class/EndDevice.adoc[`EndDevice`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#issuerID]
=== `issuerID`
+++Unique identifier of the business entity originating an end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.issuerID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#issuerTrackingID]
=== `issuerTrackingID`
+++Identifier assigned by the initiator (e.g. retail electric provider) of an end device control action to uniquely identify the demand response event, text message, or other subject of the control action. Can be used when cancelling an event or text message request or to identify the originating event or text message in a consequential end device event.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.issuerTrackingID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#priceSignal]
=== `priceSignal`
+++(if applicable) Price signal used as parameter for this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.priceSignal`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#primaryDeviceTiming]
=== `primaryDeviceTiming`
+++Timing for the control actions performed on the device identified in the end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.primaryDeviceTiming`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceTiming.adoc[`EndDeviceTiming`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#reason]
=== `reason`
+++Reason for the control action that allows to determine how to continue processing. For example, disconnect meter command may require different processing by the receiving system if it has been issued for a network-related reason (protection) or for a payment-related reason.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.reason`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#scheduledInterval]
=== `scheduledInterval`
+++(if control has scheduled duration) Date and time interval the control has been scheduled to execute within.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.scheduledInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

//[discrete]
[#secondaryDeviceTiming]
=== `secondaryDeviceTiming`
+++Timing for the control actions performed by devices that are responding to event related information sent to the primary device indicated in the end device control.  For example, load control actions performed by a PAN device in response to demand response event information sent to a PAN gateway server.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.secondaryDeviceTiming`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceTiming.adoc[`EndDeviceTiming`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#UsagePointGroups]
=== `UsagePointGroups`
+++All usage point groups receiving commands from this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.UsagePointGroups`
| Cardinality
| 0..*
| Type
| xref::class/UsagePointGroup.adoc[`UsagePointGroup`]


|===

//[discrete]
[#UsagePoints]
=== `UsagePoints`
+++All usage points receiving commands from this end device control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceControl.UsagePoints`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===


